# reddit-clone-server

./: .eslintrc.json  .gitignore  database.py  main.py  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml  tsconfig.json
alembic/: env.py
alembic/versions/: 0be6af0e006c_create_users_table.py  3a829c6ec388_add_images_field.py  4736e7bd3297_re_add_vote_constraints.py  4bcb7810f0e0_create_comment_model.py  53ca878bd911_create_posts_table.py  5b5bc3669197_create_upvote_model.py  af92d955eb78_add_google_sub_field.py  d386ae97168c_remove_upvotes_and_downvotes_table.py  de09e5b002c9_create_votes_table.py  f3d1ff4fb5c7_create_downvote_model.py  ff2b45fb07f0_create_posts_table.py
app/: config.py  database.py  main.py  models.py
app/config/: database.py  env.py  mail.py  oauth.py  redis.py
app/database/: db.py  models.py
app/models/: comment.py  downvote.py  post.py  upvote.py  user.py  vote.py
app/routers/: auth.py  comment.py  downvote.py  post.py  upvote.py  user.py  vote.py
app/schemas/: auth.py  comment.py  downvote.py  general.py  post.py  response.py  upvote.py  user.py  vote.py
app/services/: auth.py  auth_service.py  comment.py  downvote.py  image.py  mail.py  post.py  post_service.py  redis.py  upvote.py  user.py  user_service.py  vote.py
app/utils/: cookie.py  image.py  jwt.py  mail.py  otp.py  password.py  security.py
prisma/: schema.prisma
src/: index.ts  server.ts
src/config/: env-validator.ts  index.ts  prisma.config.ts
src/controllers/: post.ts
src/dtos/: post.ts
src/lib/: prisma.ts
src/middlewares/: asyncHandler.ts  (+3 more)
(+76 files in other folders)
