[project]
name = "reddit-clone-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.18.1",
    "asyncpg>=0.31.0",
    "authlib>=1.6.6",
    "fastapi-mail>=1.6.1",
    "fastapi[standard]>=0.128.0",
    "httpx>=0.28.1",
    "psycopg2>=2.9.11",
    "pwdlib[argon2]>=0.3.0",
    "pyjwt>=2.10.1",
    "python-dotenv>=1.2.1",
    "redis>=7.1.0",
    "sqlalchemy>=2.0.45",
    "starlette[full]>=0.50.0",
]
